<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">


    <!-- NOTE: EditTextPreference accepts EditText attributes. -->
    <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->
    <EditTextPreference
        android:capitalize="words"
        android:defaultValue="@string/example_name"
        android:inputType="textCapWords"
        android:key="user_name"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_display_name" />

    <EditTextPreference
        android:capitalize="words"
        android:defaultValue="@string/pref_default_user_age"
        android:inputType="number"
        android:key="user_age"
        android:maxLines="1"
        android:maxLength="3"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_user_age" />

    <EditTextPreference
        android:capitalize="words"
        android:defaultValue="@string/pref_default_user_weight"
        android:inputType="number"
        android:key="user_weight"
        android:maxLines="1"
        android:maxLength="3"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_user_weight" />

    <EditTextPreference
        android:capitalize="words"
        android:defaultValue="@string/pref_default_user_height"
        android:inputType="number"
        android:key="user_height"
        android:maxLines="1"
        android:maxLength="3"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_user_height" />
    <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
         dismiss it. -->
    <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->
    <ListPreference
        android:defaultValue="-1"
        android:entries="@array/pref_gender_list"
        android:entryValues="@array/pref_gender_values"
        android:key="user_gender"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_title_user_gender" />

</PreferenceScreen>
